...
		const syncRes = await lm.syncLdk();
		if (syncRes.isErr()) {
			return err(syncRes.error.message);
		}

		console.log(`Node ID: ${nodeIdRes.value}`);
		return ok('Running LDK'); //e2e test needs to see this string
	} catch (e) {
		return err(e.toString());
	}
};

/**
...
